fiz meu formulario no java

--- a/index.html
+++ b/index.html
@@ -5,11 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
 </head>
 <body>
-    <h1 id="tituloprincipal">titulo</h1>
-    <button onclick="alterartitulo()">alterar titulo</button>
-    <button onclick="desfazeralteracao()">desfazer alteração</button>
-    <script src="script.js"></script>
+   <header>
+    <div class="cadastro">
+        <h1>meu site</h1>
+        <nav>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+        </nav>
+    </div>    
+   </header>
+   
+   <main>
+    <div class="botoes">
+        <h2> cadastro</h2>
+        <form action="">
+            <input type="text" placeholder="nome">
+            <input type="email" placeholder="email">
+            <input type="password" placeholder="senha">
+        <button>cadastrar</button>
+        </form>
+    </div>    
+   </main>
 </body>
 </html>
