mostrar o resultado na tela para o usuario

--- a/ferragens-joao/index.html
+++ b/ferragens-joao/index.html
@@ -39,6 +39,7 @@
     <input type="text" id="qtd">
 
     <button onclick="o()">botao</button>
+    <div id="resultado"></div>
 
     <script src="script.js"></script>
 </body>
