--- a/ferragens-joao/index.html
+++ b/ferragens-joao/index.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
-   <title>cadastro de produtos</title>
-   <style>
-    body { font-family: Arial; padding: 20px;}
-    .produto{border: 1px solid #ccc;padding: 10px; margin-bottom: 10px;}
-    .form-produto {margin-top: 30px;}
-    label{ display: block; margin-top: 10px;}
-   </style>
+    <title>cadastro de produtos</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
-    <h1>Lista De Produtos</h1>
+    <div class="cabecalho">
+        <h1>Lista De Produtos</h1>
 
-    <div class="produto">
-        <h3>Camisa Branca</h3>
-        <p>Preço: R$ 49,90</p>
-        <p>Descrição: Camisa básica branca, algodão.</p>
+        <div class="produto">
+            <h3>Camisa Branca</h3>
+            <p>Preço: R$ 49,90</p>
+            <p>Descrição: Camisa básica branca, algodão.</p>
+        </div>
+
+        <div class="produto">
+            <h3>Calça Jeans</h3>
+            <p>Preço: R$ 99,90</p>
+            <p>descrição: calça jeans azul escuro.</p>
+        </div>
     </div>
-
-    <div class="produto">
-        <h3>Calça Jeans</h3>
-        <p>Preço: R$ 99,90</p>
-        <p>descrição: calça jeans azul escuro.</p>
-    </div>
-    
-
     <h2> Cadastrar Novo Produto</h2>
     <select name="" id="produtos">
         <option value="CAMISA">CAMISA</option>
@@ -34,6 +30,7 @@
         <option value="bombom">bombom</option>
         <option value="creme">creme</option>
         <option value="uva">uva</option>
+    </div>
     </select>
     <label for="">QUATNTIDADE PROCUTO</label>
     <input type="text" id="qtd">
@@ -43,4 +40,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
