Commit para salvar deletamento de arquivos!q

--- a/ferragens-joao/index.html
+++ b/ferragens-joao/index.html
@@ -32,7 +32,7 @@
         <option value="uva">uva</option>
     </div>
     </select>
-    <label for="">QUATNTIDADE PROCUTO</label>
+    <label for="">Quantidade produto</label>
     <input type="text" id="qtd">
 
     <button onclick="o()">botao</button>
