alteração no java

--- a/ferragens-joao/index.html
+++ b/ferragens-joao/index.html
@@ -35,7 +35,7 @@
     <label for="">Quantidade produto</label>
     <input type="text" id="qtd">
 
-    <button onclick="o()">botao</button>
+    <button onclick="comprar()">botao</button>
     <div id="resultado"></div>
 
     <script src="script.js"></script>
