alteração no java e css

--- a/ferragens-joao/index.html
+++ b/ferragens-joao/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <main>
     <div class="cabecalho">
         <h1>Lista De Produtos</h1>
 
@@ -22,23 +23,23 @@
             <p>Preço: R$ 99,90</p>
             <p>descrição: calça jeans azul escuro.</p>
         </div>
-    </div>
+    
     <h2> Cadastrar Novo Produto</h2>
-    <select name="" id="produtos">
+    <select name="" id="produtos" class="">
         <option value="CAMISA">CAMISA</option>
         <option value="arroz">arroz</option>
         <option value="bombom">bombom</option>
         <option value="creme">creme</option>
         <option value="uva">uva</option>
-    </div>
     </select>
     <label for="">Quantidade produto</label>
     <input type="text" id="qtd">
 
     <button onclick="comprar()">botao</button>
     <div id="resultado"></div>
-
+</div>
     <script src="script.js"></script>
+</main>
 </body>
 
 </html>
